--- a/src/main/webapp/resources/inward/bill/credit_company_letter_new.xhtml
+++ b/src/main/webapp/resources/inward/bill/credit_company_letter_new.xhtml
@@ -35,8 +35,7 @@
                  font-weight: bold;">
 
             </div>
-            <div style="font-size: 9px!important; font-family: Times New Roman!important;
-                 letter-spacing: 0px; position: absolute!important; padding-left: 5%; padding-top: 18%;">
+            <div>
                 <table >
                     <tr>
                         <td>
