Closes Issue#1071 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/resources/ezcomp/patientDetail.xhtml
+++ b/src/main/webapp/resources/ezcomp/patientDetail.xhtml
@@ -13,7 +13,7 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-    <div class="row">
+    <div class="row p-1">
         <div class="col-md-4 p-1">
             <p:selectOneMenu id="cmbTitle" value="#{cc.attrs.controller.newPatient.person.title}" placeholder="Title" class="form-control w-100">
                 <f:selectItem itemLabel="Select Title" />
