--- a/src/main/webapp/opd_bill_package.xhtml
+++ b/src/main/webapp/opd_bill_package.xhtml
@@ -128,7 +128,7 @@
                                 <div class="col-md-6">
                                     <h:panelGrid columns="1" class="w-100">
                                         <p:panel class="w-100">
-                                            <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" class="w-100 padding-x-lg" resizable="false">  
+                                            <p:dialog id="panDoc" header="Add New Doctor" widgetVar="dlg" class="w-100" resizable="false">  
                                                 <h:panelGrid columns="2" class="w-100">  
                                                     <h:outputText id="lblNameD" value="Name" ></h:outputText>
                                                     <h:inputText autocomplete="off" id="txtNameD"  value="#{doctorController.current.person.name}"  ></h:inputText>
