bill gui upgrade

--- a/src/main/webapp/resources/inward/bill/finalBillGreenSheet.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalBillGreenSheet.xhtml
@@ -19,7 +19,7 @@
     <cc:implementation>
         <h:outputStylesheet library="css" name="printing.css" />
         <div>
-            <p:panel class="bg-danger"  id="gpBillPreview"  style="margin: auto; padding: 0px; " >
+            <p:panel   id="gpBillPreview"  style="margin: auto; padding: 0px; " >
                 <div class="fiveinchbill" >
 
                     <div style="position: absolute!important;left: 58%!important; font-weight: bold!important;
