Closes Issue#1083 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/channel/channel_report_all_booking.xhtml
+++ b/src/main/webapp/channel/channel_report_all_booking.xhtml
@@ -11,8 +11,8 @@
       xmlns:ca="http://java.sun.com/jsf/composite/cashier">
     <h:body>
         <ui:composition 
-            template="/resources/template/template.xhtml" >
-            <ui:define name="content">
+            template="/channel/channel_reports.xhtml" >
+            <ui:define name="subContent">
                 <h:panelGroup rendered="true" >
                     <h:form>
                         <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
