--- a/src/main/webapp/channel/channel_card_summery_report.xhtml
+++ b/src/main/webapp/channel/channel_card_summery_report.xhtml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/channel/channel_reports.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 >
 
-    <ui:define name="content">
+    <ui:define name="subContent">
         <h:panelGroup>
             <p:panel header="Get Card Summery Report">
                 <h:form >
