--- a/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_payment_bill.xhtml
@@ -8,8 +8,8 @@
       >
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/channel/channel_reports.xhtml">
+            <ui:define name="subContent">
                 <h:form>
                     <p:panel>
                         <p:panel>
