--- a/src/main/webapp/channel/channel_report_agent_referece_book.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_referece_book.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/channel/channel_reports.xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ch="http://java.sun.com/jsf/composite/channel"
                 >
 
-    <ui:define name="content">
+    <ui:define name="subContent">
         <h:form>
             <p:panel header="Cannel Agent Reperence Book">
                 <f:facet name="header">
