--- a/src/main/webapp/channel/channel_report_all_booking_special.xhtml
+++ b/src/main/webapp/channel/channel_report_all_booking_special.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/channel/channel_reports.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
@@ -10,7 +10,7 @@
                 xmlns:au="http://java.sun.com/jsf/composite/autocomplete"
                 
                 xmlns:ca="http://java.sun.com/jsf/composite/cashier">
-    <ui:define name="content">
+    <ui:define name="subContent">
         <h:panelGroup rendered="true" >
             <h:form>
                 <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
