--- a/src/main/webapp/channel/channel_report_bill_session_1.xhtml
+++ b/src/main/webapp/channel/channel_report_bill_session_1.xhtml
@@ -9,8 +9,8 @@
       xmlns:hr="http://java.sun.com/jsf/composite/autocomplete">
 
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+        <ui:composition template="/channel/channel_reports.xhtml">
+            <ui:define name="subContent">
                 <h:form >
                     <p:panel >
                         <f:facet name="header" >
