--- a/src/main/webapp/channel/income_with_agent_bookings.xhtml
+++ b/src/main/webapp/channel/income_with_agent_bookings.xhtml
@@ -8,9 +8,9 @@
 
     <h:body>
 
-        <ui:composition template="/resources/template/template.xhtml" >
+        <ui:composition template="/channel/channel_reports.xhtml" >
 
-            <ui:define name="content">
+            <ui:define name="subContent">
                 <h:form>
                     <p:panel header="Income By Institution with agent bookings" >
                         <p:panelGrid columns="2" >
