Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -120,7 +120,7 @@
                                     <p:dataTable id="sum" 
                                                  value="#{bhtSummeryController.chargeItemTotals}" 
                                                  var="c" 
-                                                 
+                                                 scrollHeight="350"
                                                  scrollable="true"
                                                 
                                                  >
