--- a/src/main/webapp/opd/opd_bill_print.xhtml
+++ b/src/main/webapp/opd/opd_bill_print.xhtml
@@ -11,42 +11,7 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
-                <h:outputStylesheet>
-                    /* Styles for screen display */
-                    .page {
-                    
-                    }
-                    .d-flex {
-                    display: flex;
-                    }
-                    .flex-grow-1 {
-                    flex: 1;
-                    }
-                    .bill-item {
-                    border: 1px solid #ddd;
-                    margin: 20px;
-                    padding: 20px;
-                    background-color: whitesmoke;
-                    box-shadow: 3px 3px 2px 0px rgba(128, 0, 0, 1);
-                    page-break-after: always;
-                    }
-
-                    /* Styles for print */
-                    @media print {
-                    .bill-item {
-                    page-break-after: always;
-                    margin: 0px;
-                    padding: 0px
-                    }
-                    .page {
-                    border: none;
-                    background-color: transparent;
-                    box-shadow: none;
-                    margin: 0px;
-                    padding: 0px
-                    }
-                    }
-                </h:outputStylesheet>
+                
                 <h:panelGroup rendered="#{!(webUserController.hasPrivilege('OpdBilling') or webUserController.hasPrivilege('LabCashier'))}">
                     You are NOT authorized
                 </h:panelGroup>
@@ -105,7 +70,7 @@
                                                 <h:panelGroup id="fiveFivePaperWithHeadings"  
                                                               rendered="#{sessionController.loggedPreference.opdBillPaperType eq 'A4Paper'}">
                                                     <ui:repeat value="#{opdBillController.bills}" var="b">
-                                                        <bi:five_five_paper_with_headings bill="#{b}"/>                        
+                                                        <bi:A4_paper_with_headings bill="#{b}"/>                        
                                                     </ui:repeat>
                                                 </h:panelGroup>
                                                 <!--Buddhika-->
