--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -109,7 +109,7 @@
                                                 <!-- Your p:commandButton elements here wrapped in col divs -->
                                                 <div class="col-auto m-2">
                                                     
-                                                    <p:commandButton value="Profile *" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-1">
+                                                    <p:commandButton value="Profile" action="#{patientController.navigateToOpdPatientProfile()}" ajax="false" styleClass="mx-1">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
                                                     <p:commandButton value="Edit" 
@@ -118,6 +118,12 @@
                                                     </p:commandButton>
                                                     <p:commandButton value="OPD Bill" 
                                                                      action="#{patientController.navigateToOpdBillFromOpdPatient()}" 
+                                                                     ajax="false" 
+                                                                     styleClass="mx-1">
+                                                        <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                    </p:commandButton>
+                                                     <p:commandButton value="Admit" 
+                                                                      action="#{patientController.navigateToAdmitFromPatientProfile()}" 
                                                                      ajax="false" 
                                                                      styleClass="mx-1">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
