Closes Issue#1099 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/developers/edit_bht.xhtml
+++ b/src/main/webapp/developers/edit_bht.xhtml
@@ -42,7 +42,7 @@
 
                         </p:commandButton>
 
-                        <p:commandButton  value="Clear" action="#{bhtEditController.makeNull}" ajax="false" >
+                        <p:commandButton  value="Clear" action="#{bhtEditController.prepereForInwardAppointPatient}" ajax="false" >
                         </p:commandButton>
 
 
